REFACTOR: Controllers and Services refactored. Jest testing initialized
